# fastapi-k8s

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  tasks.py  worker.py
app/auth/: dependencies.py  models.py  routes.py
app/claims/: models.py  routes.py  schemas.py
app/models/: claim.py
k8s/: deployment.yaml  mongo.yaml  redis.yaml  service.yaml
test/: conftest.py
test/auth/: test_auth_login.py  test_auth_me.py  test_auth_signup.py
test/claims/: test_claims_create.py  test_claims_delete.py  test_claims_get.py  test_claims_list.py  test_claims_update.py
