[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.poetry]
name = "fastapi-k8s"
version = "0.1.0"
description = "An example API using FastAPI and K8s"
authors = ["AdrianPayne <adriansacristan1993@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
pydantic = {extras = ["email"], version = "^2.11.1"}
python-dotenv = "^1.1.0"
celery = "^5.5.0"
redis = "^5.2.1"
motor = "^3.7.0"
beanie = "^1.29.0"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-jose = ">=3.3.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
pytest-asyncio = "^0.26.0"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
pre-commit = "^4.2.0"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
